<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/cbFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_filters"
        android:checked="true"/>

    <CheckBox
        android:id="@+id/cbAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/disable_ads" />

    <CheckBox
        android:id="@+id/cbSortUrgency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_urgency" />

</LinearLayout>